# graph-rag

./: .gitignore  EVALUATION_RESULTS.md  PUBMED_INTEGRATION_SUMMARY.md  README.md  README_PUBMED_TESTING.md  TESTING_GUIDE.md  config.yaml  pyproject.toml  run_evaluation.py  run_mcq_eval.py  setup_test_data.py  system_prompts.yaml  test_end_to_end.py  test_eval.py
data/my_results/: enhanced_longform_eval_v2.csv  evaluation_output.md  longform_eval_summary.md  longform_eval_v3.csv
docker/: Dockerfile  docker-compose.yml
graphrag/: __init__.py  __main__.py
graphrag/app/: __init__.py
graphrag/app/api/: routers.py  schemas.py
graphrag/app/core/: config.py  logging.py  providers.py  tracing.py
graphrag/app/data/: __init__.py  chunking.py  ingestion.py  metadata_store.py
graphrag/app/eval/: __init__.py  datasets.py  judge.py  mcq_dataset.py  mcq_eval_runner.py  mcq_judge.py  metrics.py  run_eval.py  vanilla_rag.py
graphrag/app/graph/: __init__.py  canonicalize.py  extraction.py  store_base.py  store_neo4j.py  store_nx_pg.py  traversal.py
graphrag/app/prompts/: critique.toml  entity_link.toml  graph_answer.toml  rag_answer.toml  relation_extract.toml  routing.toml
graphrag/app/retrieval/: aggregator.py  planner.py  ranker.py  vector_store.py
graphrag/app/services/: pipeline.py
graphrag/cli/: grag.py
graphrag/examples/: 00_quickstart.ipynb  README.md
graphrag/tests/: pubmed_test_data.py  test_pubmed_integration.py
kg_rag/: utility.py
kg_rag/rag_based_generation/GPT/: run_longform_eval.py  run_longform_eval_v2.py  run_longform_eval_v3.py
test_data/pubmed/: pubmed_alzheimer_disease_treatment_5.md  pubmed_cardiac_arrhythmia_treatment_1.md  pubmed_chronic_kidney_disease_3.md  pubmed_hypertension_medication_0.md  pubmed_lung_cancer_immunotherapy_6.md  pubmed_pneumonia_diagnosis_2.md  pubmed_rheumatoid_arthritis_therapy_4.md
tests/: test_api.py  test_canonicalize.py  test_chunking.py  test_planner.py  test_traversal.py
(+2 files in other folders)
