[tool.poetry]
name = "graphrag"
version = "0.1.0"
description = "Production-ready GraphRAG implementation with promptable query flows"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.25.2"
aiofiles = "^23.2.1"
python-multipart = "^0.0.6"

# LLM Providers
openai = "^1.3.0"
anthropic = "^0.7.0"
tiktoken = "^0.5.2"

# Embeddings & Vector Stores
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
qdrant-client = "^1.7.0"
numpy = "^1.24.0"

# Graph Stores
networkx = "^3.2.1"
neo4j = "^5.14.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"

# Data Processing
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
pypdf = "^3.17.1"
markdown = "^3.5.1"
readability-lxml = "^0.8.1"

# Reranking
cohere = "^4.37"

# Utilities
click = "^8.1.7"
typer = {extras = ["all"], version = "^0.9.0"}
tomli = "^2.0.1"
python-dotenv = "^1.0.0"
structlog = "^23.2.0"
rich = "^13.7.0"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
ipykernel = "^6.26.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PIE"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

